--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 [metadata]
 name = biokeen
 version = 0.0.1-dev
-url =
+url = https://github.com/SmartDataAnalytics/BioKEEN
 author =
 author_email =
 maintainer =
