Setup and refactor projects

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@
 name = biokeen
 version = 0.0.1-dev
 url = https://github.com/SmartDataAnalytics/BioKEEN
-author =
+author = Mehdi
 author_email =
-maintainer =
+maintainer = Mehdi
 maintainer_email =
 classifiers =
     Development Status :: 1 - Planning
@@ -22,7 +22,8 @@ license = MIT
 description =
 long_description = file: README.rst
 keywords =
-
+    KEEN
+    knowledge embedding
 
 [options]
 install_requires =
