Implement function to install Bio2BELL

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,10 +6,10 @@
 name = biokeen
 version = 0.0.1-dev
 url = https://github.com/SmartDataAnalytics/BioKEEN
-author = Mehdi
-author_email =
+author = Mehdi Ali
+author_email = mehdi.ali@cs.uni-bonn.de
 maintainer = Mehdi
-maintainer_email =
+maintainer_email = mehdi.ali@cs.uni-bonn.de
 classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Developers
@@ -19,7 +19,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3 :: Only
 license = MIT
-description =
+description = BioKEEN (KnowlEdge EmbeddiNgs) is a package for training and evaluating biological knowledge graph embeddings
 long_description = file: README.rst
 keywords =
     KEEN
