Add zip_safe=False to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
     bio2bel_hippie
     tqdm
     pandas
+zip_safe = false
 python_requires = >=3.6
 packages = find:
 package_dir =
