Get installation of keen from git working

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,9 @@ install_requires =
     bio2bel_hippie
     tqdm
     pandas
+    keen
+dependency_links =
+    git+https://github.com/smartDataAnalytics/KEEN.git#egg=keen
 zip_safe = false
 python_requires = >=3.6
 packages = find:
