--- a/tox.ini
+++ b/tox.ini
@@ -96,7 +96,7 @@ deps =
 changedir = docs
 deps =
     sphinx
-    sphinx_rtd_theme
+    sphinx-rtd-theme
     sphinx-click
 commands =
     mkdir -p {envtmpdir}
