--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ version = 0.0.1-dev
 url = https://github.com/SmartDataAnalytics/BioKEEN
 author = Mehdi Ali
 author_email = mehdi.ali@cs.uni-bonn.de
-maintainer = Mehdi
+maintainer = Mehdi Ali
 maintainer_email = mehdi.ali@cs.uni-bonn.de
 classifiers =
     Development Status :: 1 - Planning
@@ -32,9 +32,7 @@ install_requires =
     bio2bel_hippie
     tqdm
     pandas
-    keen
-dependency_links =
-    git+https://github.com/smartDataAnalytics/KEEN.git#egg=keen
+    pykeen
 zip_safe = false
 python_requires = >=3.6
 packages = find:
