First version of CLI

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # Configuring setup()
 [metadata]
 name = biokeen
-version = 0.0.1-dev
+version = 0.0.1
 url = https://github.com/SmartDataAnalytics/BioKEEN
 author = Mehdi Ali
 author_email = mehdi.ali@cs.uni-bonn.de
@@ -28,8 +28,6 @@ keywords =
 [options]
 install_requires =
     pybel
-    bio2bel_drugbank
-    bio2bel_hippie
     tqdm
     pandas
     pykeen
