--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,4 +11,4 @@ global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle
 
 exclude .bumpversion.cfg data
 
-include *.rst *.txt *.yml *.ini LICENSE .flake8
+include *.rst *.tsv *.txt *.yml *.ini LICENSE .flake8
