--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,9 @@ packages = find:
 package_dir =
     = src
 
+[options.extras_require]
+docs = sphinx; sphinx-rtd-theme, sphinx-click
+
 [options.packages.find]
 where = src
 
