--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,8 @@ whitelist_externals =
     /bin/cat
     /bin/cp
     /bin/mkdir
+    /usr/bin/git
+    /usr/local/bin/git
 
 [testenv:coverage-clean]
 deps = coverage
@@ -42,7 +44,6 @@ skip_install = true
 commands = check-manifest
 
 [testenv:flake8]
-basepython = python3
 skip_install = true
 deps =
     flake8
@@ -76,7 +77,6 @@ commands = pyroma --min=10 .
 description = Run the pyroma tool to check the project's package friendliness.
 
 [testenv:doc8]
-basepython = python3
 skip_install = true
 deps =
     sphinx
@@ -119,12 +119,12 @@ commands =
 
 [testenv:bumpversion]
 commands = bumpversion {posargs}
+passenv = HOME
 skip_install = true
 deps =
     bumpversion
 
 [testenv:build]
-basepython = python3
 skip_install = true
 deps =
     wheel
@@ -133,7 +133,6 @@ commands =
     python setup.py -q sdist bdist_wheel
 
 [testenv:release]
-basepython = python3
 skip_install = true
 deps =
     {[testenv:build]deps}
@@ -143,11 +142,8 @@ commands =
     twine upload --skip-existing dist/*
 
 [testenv:finish]
-basepython = python3
 skip_install = true
-whitelist_externals =
-    /bin/git
-    /usr/local/bin/git
+passenv = HOME
 deps =
     {[testenv:build]deps}
     {[testenv:release]deps}
