Add coverage settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,37 @@ where = src
 console_scripts =
     biokeen = biokeen.cli:main
 
-# configuring bdist_wheel
+#############################
+# bdist_wheel Configuration #
+#############################
 [bdist_wheel]
 python-tag = py36
+
+######################
+# Doc8 Configuration #
+# (doc8.ini)         #
+######################
+[doc8]
+max-line-length = 120
+
+##########################
+# Coverage Configuration #
+# (.coveragerc)          #
+##########################
+[coverage:run]
+branch = True
+source = biokeen
+omit =
+    tests/*
+    docs/*
+
+[coverage:paths]
+source =
+    src/biokeen
+    .tox/*/lib/python*/site-packages/biokeen
+
+[coverage:report]
+show_missing = True
+exclude_lines =
+    def __str__
+    def __repr__
