--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,14 +1,14 @@
 graft src/keen
 graft tests
+prune notebooks
+prune data
 
 recursive-include docs/source *.py
 recursive-include docs/source *.rst
-recursive-exclude data *.tsv *.pickle *.json
 include docs/Makefile
 include config/config.ini
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle
 
-exclude .bumpversion.cfg data
-
-include *.rst *.tsv *.txt *.yml *.ini LICENSE .flake8
+exclude .bumpversion.cfg data .travis.yml .readthedocs.yml .flake8
+include LICENSE README.rst tox.ini *.tsv
