--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,9 @@ source = biokeen
 omit =
     tests/*
     docs/*
+    src/biokeen/cli_utils/*
+    src/biokeen/cli.py
+    src/biokeen/__main__.py
 
 [coverage:paths]
 source =
