--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,11 @@
-graft src/keen
+graft src
 graft tests
 prune notebooks
 prune data
 
 recursive-include docs/source *.py
 recursive-include docs/source *.rst
+recursive-include docs/images *.png
 include docs/Makefile
 include config/config.ini
 
