--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ prune data
 
 recursive-include docs/source *.py
 recursive-include docs/source *.rst
-recursive-include docs/images *.png
+recursive-include docs/source *.png
 include docs/Makefile
 include config/config.ini
 
