--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,8 @@ where = src
 [options.entry_points]
 console_scripts =
     biokeen = biokeen.cli:main
+pykeen.data.importer =
+	bio2bel = biokeen.content:handle_bio2bel
 
 #############################
 # bdist_wheel Configuration #
