--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,10 @@ package_dir =
     = src
 
 [options.extras_require]
-docs = sphinx; sphinx-rtd-theme; sphinx-click
+docs =
+    sphinx
+    sphinx-rtd-theme
+    sphinx-click
 
 [options.packages.find]
 where = src
