Fix documentation build

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,6 @@
 # See: https://docs.readthedocs.io/en/latest/yaml-config.html
 build:
-    image: latest
+  image: latest
 python:
   version: 3.6
-  pip_install: false
-  extra_requirements:
-  - docs
-  -
+requirements_file: requirements-rtd.txt
