--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,5 +11,5 @@ include config/config.ini
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle
 
-exclude .bumpversion.cfg data .travis.yml .readthedocs.yml .flake8
+exclude .bumpversion.cfg data .travis.yml .readthedocs.yml .flake8 requirements-rtd.txt
 include LICENSE README.rst tox.ini *.tsv
