--- a/tox.ini
+++ b/tox.ini
@@ -112,8 +112,8 @@ commands =
 
 [testenv:bumpversion]
 commands = bumpversion {posargs}
-passenv = HOME
 skip_install = true
+passenv = HOME
 deps =
     bumpversion
 
@@ -138,7 +138,6 @@ commands =
 skip_install = true
 passenv = HOME
 deps =
-    {[testenv:build]deps}
     {[testenv:release]deps}
     bumpversion
 commands =
@@ -146,3 +145,4 @@ commands =
     {[testenv:release]commands}
     git push
     bumpversion patch
+    git push
