--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # Configuring setup()
 [metadata]
 name = biokeen
-version = 0.0.12
+version = 0.0.13-dev
 url = https://github.com/SmartDataAnalytics/BioKEEN
 author = Mehdi Ali
 author_email = mehdi.ali@cs.uni-bonn.de
