--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ deps =
     flake8-import-order
     pep8-naming
 commands =
-    flake8 src/biokeen/ setup.py
+    flake8 src/biokeen/ tests/ setup.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:xenon]
