Update handling of extras and reorganize setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,18 @@
 [metadata]
 name = biokeen
 version = 0.0.13-dev
+description = BioKEEN (KnowlEdge EmbeddiNgs) is a package for training and evaluating biological knowledge graph embeddings
+long_description = file: README.rst
+
 url = https://github.com/SmartDataAnalytics/BioKEEN
+
 author = Mehdi Ali
 author_email = mehdi.ali@cs.uni-bonn.de
 maintainer = Mehdi Ali
 maintainer_email = mehdi.ali@cs.uni-bonn.de
+
+license = MIT
+
 classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Developers
@@ -18,9 +25,6 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3 :: Only
-license = MIT
-description = BioKEEN (KnowlEdge EmbeddiNgs) is a package for training and evaluating biological knowledge graph embeddings
-long_description = file: README.rst
 keywords =
     KEEN
     knowledge embedding
@@ -47,6 +51,7 @@ docs =
     sphinx
     sphinx-rtd-theme
     sphinx-click
+    sphinx_autodoc_typehints
 
 [options.packages.find]
 where = src
