--- a/tox.ini
+++ b/tox.ini
@@ -87,10 +87,8 @@ deps =
 
 [testenv:docs]
 changedir = docs
-deps =
-    sphinx
-    sphinx-rtd-theme
-    sphinx-click
+extras =
+    docs
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
