--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,14 @@
 [metadata]
 name = biokeen
 version = 0.0.13-dev
-description = BioKEEN (KnowlEdge EmbeddiNgs) is a package for training and evaluating biological knowledge graph embeddings
+description = A package for training and evaluating biological knowledge graph embeddings
 long_description = file: README.rst
 
 url = https://github.com/SmartDataAnalytics/BioKEEN
+download_url = https://github.com/SmartDataAnalytics/BioKEEN/releases
+project_urls =
+    Bug Tracker = https://github.com/SmartDataAnalytics/BioKEEN/issues
+    Documentation = https://biokeen.readthedocs.io
 
 author = Mehdi Ali
 author_email = mehdi.ali@cs.uni-bonn.de
@@ -16,6 +20,7 @@ maintainer = Mehdi Ali
 maintainer_email = mehdi.ali@cs.uni-bonn.de
 
 license = MIT
+license_file = LICENSE
 
 classifiers =
     Development Status :: 1 - Planning
@@ -61,12 +66,6 @@ console_scripts =
     biokeen = biokeen.cli:main
 pykeen.data.importer =
 	bio2bel = biokeen.content:handle_bio2bel
-
-#############################
-# bdist_wheel Configuration #
-#############################
-[bdist_wheel]
-python-tag = py36
 
 ######################
 # Doc8 Configuration #
