Update coverage configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -84,8 +84,7 @@ source = biokeen
 omit =
     tests/*
     docs/*
-    src/biokeen/cli_utils/*
-    src/biokeen/cli.py
+    src/biokeen/cli/*
     src/biokeen/__main__.py
 
 [coverage:paths]
