Enable import from BEL commons
Closes #18

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,7 @@ console_scripts =
     biokeen = biokeen.cli:main
 pykeen.data.importer =
 	bio2bel = biokeen.content:handle_bio2bel
+	bel_commons = biokeen.content:handle_bel_commons
 
 ######################
 # Doc8 Configuration #
