--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,8 @@ keywords =
 [options]
 install_requires =
     mock
-    pybel
-    bio2bel
+    pybel<0.14.0
+    bio2bel<0.3.0
     tqdm
     pandas
     pykeen
