--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # Configuring setup()
 [metadata]
 name = biokeen
-version = 0.0.14-dev
+version = 0.0.14
 description = A package for training and evaluating biological knowledge graph embeddings
 long_description = file: README.rst
 
