Update bio2bel requirement
Still need to push all the dependencies to PyPI

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,8 @@ keywords =
 [options]
 install_requires =
     mock
-    pybel<0.14.0
-    bio2bel<0.3.0
+    pybel>=0.14.0
+    bio2bel>=0.3.0
     tqdm
     pandas
     pykeen
@@ -64,9 +64,6 @@ where = src
 [options.entry_points]
 console_scripts =
     biokeen = biokeen.cli:main
-pykeen.data.importer =
-	bio2bel = biokeen.content:handle_bio2bel
-	bel_commons = biokeen.content:handle_bel_commons
 
 ######################
 # Doc8 Configuration #
